feat: Add progress-based coloring system (v4.0.0)
Enhanced fork with progress tracking capabilities:
- Progress API: -100 to +100 value range
- ColorScale system with automatic color mapping
- Backward compatible with v3.x intensity API
- TypeScript strict mode
- Full test coverage
- Development-mode validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,39 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "module": "commonjs",
+    "lib": ["ES2020"],
     "jsx": "react-native",
     "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "outDir": "./dist",
-    "declaration": true
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
-  "exclude": ["__tests__", "node_modules", "dist"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "__tests__",
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ]
 }
