--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-node_modules/**/*
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Test coverage
+coverage/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories
+.vscode/
+.idea/
+
+# OS
 .DS_Store
-.idea
-yarn-error.log
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.log
