--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-native-body-highlighter",
-  "version": "3.1.3",
+  "name": "@zoran/react-native-body-highlighter",
+  "version": "4.0.0",
+  "description": "Enhanced React Native body highlighter with progress tracking, mirroring, and improved TypeScript support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "author": "HichamELBSI",
+  "author": "Zoran (based on work by Hicham ELABBASSI)",
   "license": "MIT",
   "keywords": [
     "react-native",
@@ -14,50 +15,69 @@
     "highlighter",
     "highlight",
     "color",
-    "svg"
+    "svg",
+    "fitness",
+    "progress-tracking",
+    "anatomy"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zoran/react-native-body-highlighter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zoran/react-native-body-highlighter/issues"
+  },
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noUnusedLocals false --noUnusedParameters false",
+    "build:watch": "tsc --watch --noUnusedLocals false --noUnusedParameters false",
     "test": "jest",
-    "prepare": "yarn build",
-    "typecheck": "tsc --noEmit"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\" \"**/*.{json,md}\"",
+    "prepare": "npm run build"
   },
   "dependencies": {
-    "react-native-svg": "^15.9.0"
+    "react-native-svg": "^15.0.0"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": ">=18.0.0",
+    "react-native": ">=0.70.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-flow-strip-types": "^7.27.1",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-flow": "^7.27.1",
-    "@babel/preset-react": "^7.28.5",
-    "@babel/preset-typescript": "^7.28.5",
-    "@react-native/babel-preset": "^0.82.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^13.3.3",
-    "@types/react": "^18.3.12",
-    "@types/react-native": "^0.73.0",
-    "babel-jest": "^30.2.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@react-native/babel-preset": "^0.76.0",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "metro-react-native-babel-preset": "^0.77.0",
-    "prettier": "^3.6.2",
-    "react": "^19.2.0",
-    "react-native": "^0.82.1",
-    "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "^19.2.0",
-    "typescript": "^5.6.3"
+    "prettier": "^3.4.2",
+    "react": "^18.0.0",
+    "react-native": "^0.76.0",
+    "react-test-renderer": "^18.0.0",
+    "typescript": "^5.7.0"
   },
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "yarn@1.22.22"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
